vcluster_versioned_docs/version-0.37.0/configure/vcluster-yaml/sync/from-host/nodes.mdx
---
title: Nodes
sidebar_label:  nodes
sidebar_position: 2
description: Configuration for node synchronization in vCluster, including pseudo and real node syncing options.
sidebar_class_name: host-nodes
---

import SyncNodes from '../../../../_partials/config/sync/fromHost/nodes.mdx'
import TenancySupport from '../../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" />

By default, this is disabled by default. vCluster only displays nodes in the tenant cluster if the tenant cluster
has synced pods to that worker node from the control plane cluster. If there 
are no more pods on a node, vCluster deletes the node. Without syncing the nodes, these nodes are considered pseudo
nodes as the name is the only real value, and the rest of the node information is randomly generated.

If you need specific node information, enabling to sync nodes from the control plane cluster will allow the real information
from the node to be available from the tenant cluster context. In order to access node information, a cluster role is deployed
onto the control plane cluster.

:::warning Node and kubelet disclosure on shared nodes
Syncing real nodes gives every tenant on a shared node visibility into that node's identity. `networking.advanced.proxyKubelets` enables a vCluster-mediated kubelet proxy that backs kubelet metrics scraping and `kubectl top node` against synced nodes. On vCluster v0.34.0 and later, its pod-listing, container-log, and per-pod stats responses are scoped to the tenant's own pods. Node-level metric samples aren't scoped on any version. Disable it unless you need that workflow, both to close that remaining gap and as a safeguard on any version older than v0.34.0. Always set `clearImageStatus: true` alongside this setting on shared nodes, and review [node and kubelet disclosure](../../../../security/shared-nodes-hardening.mdx#operational-hardening-and-lifecycle) before enabling it for trusted tenants.
:::

:::info Node IP obfuscation
By default, vCluster obfuscates node IP addresses when syncing real nodes to protect sensitive information. Learn how to [control node IP visibility](../../../../learn-how-to/worker-nodes/host-nodes/control-node-ip-visibility.mdx) for your use case.
:::

## Select a set of nodes

By default, vCluster is able to schedule pods to *any* of the worker nodes in the control plane cluster, but you can isolate a tenant cluster to only use 
a set of specific nodes from the control plane cluster. There are multiple reasons why you may want to dedicate nodes to a tenant cluster including:
  - Restricting vCluster to nodes in a specific region.
  - Targeting nodes with a particular architecture.
  - Using only spot or preemptible instances.
  - Preventing vCluster workloads from running on critical infrastructure nodes.

Selecting nodes is based on a node label selector, where the nodes on the control plane cluster must have the matching labels.

### Select a set of nodes without syncing node information

If you don't want to sync node information, you can still select to use only a set of nodes from the control plane cluster. 

```yaml title="Select dedicated nodes without syncing real node information"
sync:
  fromHost:
    nodes:
      # Do not sync real node information
      enabled: false
      # Select a set of nodes based on the node labels
      selector:
        labels:
          environment: production
          team: backend
```

### Select a set of nodes and sync node information

You can select a set of nodes from the control plane cluster while also requesting that the nodes sync with the real information from the control plane cluster. 

```yaml title="Select dedicated nodes and syncing real node information"
sync:
  fromHost:
    nodes:
      # Sync real node information
      enabled: true
      # Select a set of nodes based on the node labels
      selector:
        labels:
          environment: production
          team: backend
```

## Sync real nodes

Sync nodes to the tenant cluster to view real node information. The tenant cluster will only display
the host nodes that have a pod deployed onto it. By enabling this sync, a cluster role is deployed 
by the vCluster onto the control plane cluster.

```yaml title="Sync nodes for real node information"
sync:
  fromHost:
    nodes:
      enabled: true
```

### Sync all real nodes

When syncing nodes, only nodes that have pods deployed on them will show up in the tenant cluster, but you can
sync all the nodes from the control plane cluster. When selecting all the nodes, `kubectl get nodes` will display 
all the host nodes whether or not a pod has been scheduled onto the control plane cluster. 

```yaml title="Make all nodes visible to the tenant cluster"
sync:
  fromHost:
    nodes:
      enabled: true
      selector:
        all: true
```

### Sync back labels and taints

By default, when syncing nodes from the control plane cluster, labels, and taints are only synced from the control plane cluster to the tenant cluster. No changes from the tenant 
cluster context would be reflected on the host nodes. 

Enabling `syncBackChanges` allows labels and taints set from the tenant cluster context to be synced to the host nodes. Additional 
 permissions are added to the cluster role to edit the host nodes.

```yaml title="Sync labels and taints from the tenant cluster context to the host node"
sync:
  fromHost:
    nodes:
      enabled: true
      syncBackChanges: true
```

### Hide image information

When multiple tenants are using the same set of host nodes, container image metadata could be used maliciously. For increased security,
you can enable `clearImageStatus` to remove all `status.images` from the node object.

```yaml title="Clear Image Status on the Node"
sync:
  fromHost:
    nodes:
      enabled: true
      clearImageStatus: true
```

### Patches

Use `sync.fromHost.nodes.patches` to transform node fields while syncing nodes from the control plane cluster to the tenant cluster. See [Patching synced resources](../patching/README.mdx) for syntax, directionality, and examples.

## Config reference

<SyncNodes/>
